<resources>
    <string name="app_name">AndroTweet Buddy</string>

    <!--Login & Registration Strings -->
    <string name="lbl_registerButton">Register</string>
    <string name="lbl_loginButton">Login</string>
    <string name="lbl_forgotPasswordButton">Forgot your password?</string>
    <string name="lbl_resetPasswordButton">Reset Password</string>
    <string name="lbl_backButton"><![CDATA[<< Back]]></string>
    <string name="lbl_changeButton">Change</string>
    <string name="lbl_sendButton">Send</string>
    <string name="lbl_removeButton">Remove</string>
    <string name="lbl_singoutButton">Sign Out</string>
    <string name="lbl_link2RegisterButton">Not a member? Get registered now!</string>
    <string name="lbl_link2LoginButton">Already registered. Login Me!</string>

    <string name="hint_new_email">New Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>

    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="user_registered">Your accounts created! Check Your %d inbox for the activation link.</string>
    <string name="password_reset_email_sent">Password reset email sent. %d</string>

    <string name="err_minimum_password">Password too short, enter minimum 5 characters!</string>
    <string name="err_auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="err_invalid_email">This email address is invalid</string>
    <string name="err_incorrect_password">This password is incorrect</string>
    <string name="err_field_required">This field is required</string>
    <string name="err_user_registeration_failed">User creation failed!</string>

    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="loading">Loading...</string>
    <string name="user_logon">You\'re Loged On :)</string>
    <string name="err_send_password">Sending reset password email failed!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refreshAccountsInfo">Refresh Accounts Info</string>
    <string name="title_activity_main">MainActivity</string>
    <!--Login & Registration Strings -->

</resources>
